# pyrefly_bazel_sample

./: .gitignore  MODULE.bazel  README.md  TODO.MD  WORKSPACE.bazel  contributors.md  pyproject.toml  pyrefly-ci.toml  pyrefly.toml  sample_output_main.json
.github/workflows/: ci.yml
click/: BUILD.bazel  __init__.py  core.py
colorama/: BUILD.bazel  __init__.py  ansi.py
libs/common/: BUILD.bazel  __init__.py  formatters.py  parsers.py
my_project/: BUILD.bazel  __init__.py  app.py  main.py
my_project/utils/: __init__.py  formatting.py
plugins/: BUILD.bazel  __init__.py  analyzer.py
scripts/: BUILD.bazel  run_report.py
services/reporting/: BUILD.bazel  __init__.py  generator.py  metrics.py  report_cli.py
tests/: test_pyrefly_bazel_query.py
tests/expected_outputs/: basic_single_file.json  full_project.json
tests/fixtures/: bazel  bazel_command_map.json
tools/: __init__.py  pyrefly_bazel_query.py
