load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Pin rules_python (adjust version if needed)
http_archive(
    name = "rules_python",
    urls = ["https://github.com/bazelbuild/rules_python/releases/download/0.36.0/rules_python-0.36.0.tar.gz"],
    strip_prefix = "rules_python-0.36.0",
)

load("@rules_python//python:repositories.bzl", "python_register_toolchains")

# Registers a hermetic CPython 3.11 toolchain.
python_register_toolchains(
    name = "python3_11",
    python_version = "3.11",
)
