[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrefly-bazel-sample"
version = "0.1.0"
description = "Sample project showing how to integrate Pyrefly with Bazel."
readme = "README.md"
authors = [{ name = "Pyrefly Bazel Sample Maintainers" }]
license = "MIT"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
packages = []

[project.optional-dependencies]
test = [
  "pytest>=8.2",
  "pyrefly>=0.36.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
