load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "reporting_lib",
    srcs = [
        "__init__.py",
        "generator.py",
        "metrics.py",
    ],
    deps = ["//libs/common:common_utils"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "report_cli",
    srcs = ["report_cli.py"],
    deps = [
        ":reporting_lib",
        "//click:click_lib",
    ],
)
